--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,13 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 .App {
   text-align: center;
+}
+
+.active{
+  background-color: gray;
 }
 
 .App-logo {
